--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "pwa-chrome",
             "request": "launch",
             "name": "Open home.html",
-            "file": "\\home.html"
+            "file": "home.html"
         }
     ]
 }
